fixed uneven X

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,7 +19,7 @@
 }
 
 #hamburger {
-  width: 30px;
+  width: 29px;
   height: 25px;
   position: relative;
   cursor: pointer;
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 #hamburger span {
